# mod2c

./: AUTHORS.txt  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  mod2c-ci.yml
src/mod2c_core/: CMakeLists.txt  deriv.c  init.c  io.c  kinetic.c  lex.l  modl.c  modl.h  nmodlconf.h  nmodlfunc.h  noccout.c  nocpout.c  parsact.c  parse1.y  portability.h  sens.c  simultan.c  solve.c  units.c
test/validation/: CMakeLists.txt  test_mod2c.in
test/validation/mod/: NaSm.mod
test/validation/mod2c_core/c/: NaSm.c  Nap.c  NapDA.c  NapIn.c  Nap_E.c  Nap_No.c  SynNMDA10_1.c  SynNMDA10_2.c  SynNMDA10_2_2.c  SynNMDA16.c  SynNMDA16_2.c  is.c  zoidsyn.c
test/validation/mod2c_core/cpp/: NaSm.cpp  Nap.cpp  NapDA.cpp  NapIn.cpp  Nap_E.cpp  Nap_No.cpp  SynNMDA10_1.cpp  SynNMDA10_2.cpp  SynNMDA10_2_2.cpp  SynNMDA16.cpp  SynNMDA16_2.cpp  is.cpp  isi.cpp  vecevent.cpp  zoidsyn.cpp
